--- a/esgela/package.json
+++ b/esgela/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "mongodb": "^6.6.0",
     "mongoose": "^8.3.1",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
